Do not break inside a table row

--- a/lib/css/docs.css
+++ b/lib/css/docs.css
@@ -140,6 +140,11 @@ section {
         page-break-before: always;
         page-break-inside: avoid;
     }
+
+	tr {
+		page-break-inside: avoid;
+	}
+
 	.page-break {
 		page-break-after: always;
 	}
