--- a/lib/css/screen.css
+++ b/lib/css/screen.css
@@ -6254,6 +6254,7 @@ body {
 
 #figure1 {
   position: relative;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.75);
   padding: 0;
   margin: 0;
   height: 401px; }
