--- a/lib/css/screen.scss
+++ b/lib/css/screen.scss
@@ -145,7 +145,7 @@ strong, b {
   td,
   th {
     border: none;
-    padding: .5rem .3rem;
+    padding: .3rem;
 
     &:first-child {
       width: 160px;
